# missile_pursuit_evasion_rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/agent/: lstm_sac.yaml  sac.yaml
configs/env/: pursue_escape_env.yaml
configs/eval/: benchmark_paper.yaml  benchmark_smoke.yaml  eval_policy.yaml  eval_policy_smoke.yaml  eval_sac.yaml
configs/train/: curriculum_sac.yaml  train_lstm_sac.yaml  train_lstm_sac_smoke.yaml  train_sac.yaml  train_sac_paper.yaml  train_two_interceptor_sac.yaml
data/: README.md
docs/: chapter4_mapping.md  chapter5_lstm_sac_plan.md  env_model.md  experiment_workflow.md  model_fidelity_matrix.md  project_design.md  project_progress.md  sac_framework.md
experiments/lstm_sac_chapter5_smoke/: run_manifest.json
scripts/: calibrate_interceptor_guidance.py  debug_env_rollout.py  debug_guidance.py  debug_interceptor_compare.py  debug_interceptor_model.py  debug_two_interceptor_compare.py  eval_policy.py  eval_sac.py  plot_results.py  run_paper_benchmark.py  train_curriculum_sac.py  train_lstm_sac.py  train_sac.py  train_two_interceptor_sac.py
src/hypersonic_rl/: __init__.py
src/hypersonic_rl/agents/: __init__.py  lstm_sac_agent.py  sac_agent.py
src/hypersonic_rl/buffers/: __init__.py  replay_buffer.py  sequence_replay_buffer.py
src/hypersonic_rl/envs/: __init__.py  autopilot.py  dynamics.py  (+7 more)
tests/: test_autopilot.py  test_env_reset_step.py  test_evaluation_metrics.py  test_guidance_closure.py  test_lstm_sac_components.py  test_replay_buffer.py  test_sac_networks.py  test_training_one_step.py  test_visualization.py
(+27 files in other folders)
